# welcometothedjango-eventex

./: .env-sample  .gitignore  README.md  mod-1-28-mapa-da-estrutura-do-eventex.xmind  pyproject.toml
eventex/: settings.py  urls.py
eventex/core/oldstatic/css/: main.css
eventex/core/templates/: 404.html  500.html  base.html  index.html
eventex/subscriptions/: admin.py  models.py  tests.py  views.py
eventex/subscriptions/templates/subscriptions/: subscription_detail.html  subscription_email.txt  subscriptions_form.html
eventex/subscriptions/tests/: test_form_subscription.py  test_mail_subscribe.py  test_model_subscription.py  test_view_detail.py  test_view_subscribe.py
